syntax = "proto3";

package hello.endpoints.health;
option go_package="pkg/protobuf/healthpb";

import "google/api/annotations.proto";

message StatusRequest{}

message StatusResponse{
    string status = 1;
}

message CheckServicesRequest{}

message CheckServicesResponse{
    string status = 1;
    string version = 2;
    map<string, string> data = 3;
}

service Health {
    rpc Status(StatusRequest) returns (StatusResponse) {
        option (google.api.http) = { get: "/" };
    }
    rpc Check(CheckServicesRequest) returns (CheckServicesResponse) {
        option (google.api.http) = { get: "/check" };
    }
}
