syntax = "proto3";

package hello.endpoints.ping;
option go_package="pkg/protobuf/pingpb";

message PingRequest{}

message PingResponse{
    string response = 1;
}

service Ping {
    rpc Ping(PingRequest) returns (PingResponse) {}
}
